fix(tractive): unplausible Zonen verwerfen und Ausfall sichtbar loggen